Fix search button alignment and mobile layout

--- a/home.css
+++ b/home.css
@@ -79,6 +79,7 @@ button {
 }
 
 .top #btn {
+    display: flex;
     padding: 8px 14px;
     margin-left: 6px;
     min-width: 64px;
@@ -362,7 +363,7 @@ button {
 }
 
 .btn:hover {
-    background-color: rgb(85, 189, 125,0.2);
+    background-color: rgb(85, 189, 125, 0.2);
 }
 
 .card {
@@ -420,7 +421,7 @@ button {
 }
 
 .act:hover {
-   background-color: rgb(85, 189, 125,0.2);
+    background-color: rgb(85, 189, 125, 0.2);
 }
 
 .right {
@@ -497,41 +498,41 @@ button {
         display: none;
     }
 }
+
 /*  on desktop */
 .hamburger {
-  display: none;
-  font-size: 26px;
-  cursor: pointer;
+    display: none;
+    font-size: 26px;
+    cursor: pointer;
 }
 
 /*Mobile  */
 @media (max-width: 600px) {
 
-  .menu,
-  .more {
-    display: none;
-  }
+    .menu,
+    .more {
+        display: none;
+    }
 
 
-  /* Show hamburger */
-  .hamburger {
-    display: block;
-  }
+    /* Show hamburger */
+    .hamburger {
+        display: block;
+    }
 
-  #nav-toggle:checked ~ .menu
-   {
-    display: flex;
-    flex-direction: column;
-    background: white;
-    position: absolute;
-    top: 60px;
-    right: 10px;
-    padding: 12px;
-    border-radius: 8px;
-    z-index: 1000;
-  }
+    #nav-toggle:checked~.menu {
+        display: flex;
+        flex-direction: column;
+        background: white;
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        padding: 12px;
+        border-radius: 8px;
+        z-index: 1000;
+    }
 
-  .menu .item{
-    padding: 10px;
-  }
+    .menu .item {
+        padding: 10px;
+    }
 }
